--- a/app/pages/login/login.html
+++ b/app/pages/login/login.html
@@ -1,6 +1,7 @@
-<StackLayout>
+<StackLayout #container>
     <Image src="res://logo_login" stretch="none" horizontalAlignment="center"></Image>
 
+    <TextField hint="Display Name" [(ngModel)]="user.displayname" *ngIf="!isLoggingIn"></TextField>
     <TextField hint="Email Address" keyboardType="email" [(ngModel)]="user.email"
                autocorrect="false" autocapitalizationType="none"></TextField>
     <TextField hint="Password" secure="true" [(ngModel)]="user.password"></TextField>
