--- a/app/pages/list/list.html
+++ b/app/pages/list/list.html
@@ -1,14 +1,14 @@
-<ActionBar title="Groceries">
+<ActionBar title="Todos">
     <ActionItem text="Share" (tap)="share()" android.systemIcon="ic_menu_share_holo_dark" ios.systemIcon="9" ios.position="right"></ActionItem>
 </ActionBar>
 <GridLayout rows="auto, *">
 
     <GridLayout row="0" columns="*, auto" class="add-bar">
-        <TextField #groceryTextField [(ngModel)]="grocery" hint="Enter a grocery item" col="0"></TextField>
+        <TextField #todosTextField [(ngModel)]="todos" hint="Enter a todo item" col="0"></TextField>
         <Image src="res://add" (tap)="add()" col="1"></Image>
     </GridLayout>
 
-    <ListView [items]="groceryList" row="1" class="small-spacing" [class.visible]="listLoaded">
+    <ListView [items]="todosList" row="1" class="small-spacing" [class.visible]="listLoaded">
         <template let-item="item">
             <Label [text]="item.name" class="medium-spacing"></Label>
         </template>
