APIs, status bar, delete

--- a/app/pages/list/list.html
+++ b/app/pages/list/list.html
@@ -10,7 +10,10 @@
 
     <ListView [items]="todosList" row="1" class="small-spacing" [class.visible]="listLoaded">
         <template let-item="item">
-            <Label [text]="item.name" class="medium-spacing"></Label>
+            <GridLayout row="0" columns="*, auto" class="list-element">
+                <Label [text]="item.name" class="medium-spacing" col="0"></Label>
+                <Image src="res://delete" class="delete-button" (tap)="deleteTodos(item)" col="1"></Image>
+            </GridLayout>
         </template>
     </ListView>
     <ActivityIndicator [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" row="1" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
